# ProgrammingProjects

./: .gitignore  README.md
Atari800_Emulator/src/assembler/: CMakeLists.txt  assembler.hpp  main.cpp
Atari800_Emulator/src/emulator/: CMakeLists.txt  main.cpp
Atari800_Emulator/src/emulator/6502/: instruction_handlers.hpp  memory.hpp
Atari800_Emulator/src/emulator/devices/: CMakeLists.txt
Atari800_Emulator/src/emulator/devices/antic/: README.md
Atari800_Emulator/src/emulator/devices/gtia/: README.md
Atari800_Emulator/src/emulator/devices/pokey/: README.md
Atari800_Emulator/src/emulator/screen/: CMakeLists.txt  NCursesWrapper.hpp  README.md
Atari800_Emulator/tests/: CMakeLists.txt
Atari800_Emulator/tests/assembler/: CMakeLists.txt  test_assembler_UT.cpp
Atari800_Emulator/tests/atari800/: CMakeLists.txt  test_dummy_6502_UT.cpp
Atari800_Emulator/tests/atari800/6502/: CMakeLists.txt
Atari800_Emulator/tests/atari800/6502/asm/: test_6502_asm.cpp
Atari800_Emulator/tests/screen/: CMakeLists.txt  test_screen_UT.cpp
CppArgParser/: .gitignore  (+4 more)
CppArgParser/tests/: CMakeLists.txt
DataStructures/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
DataStructures/src/: CMakeLists.txt
DataStructures/src/algorithms/: CMakeLists.txt  container_algorithms.hpp  rotate.hpp  swap.hpp
DataStructures/src/structures/: CMakeLists.txt  array.hpp  binary_search_tree.hpp  deque.hpp  linked_list.hpp  map.hpp  vector.hpp
DataStructures/tests/: CMakeLists.txt  array_ut.cpp  bst_ut.cpp  deque_ut.cpp  list_ut.cpp  vector_ut.cpp
Emulator/: CMakeLists.txt  CMakePresets.json  Makefile  README.md
Emulator/src/: CMakeLists.txt
Emulator/src/assembler/: README.md  main.cpp
Emulator/src/assembler/programs/: examples.S  test.S
Emulator/src/compiler/: CMakeLists.txt
Emulator/src/emulator/: CMakeLists.txt  emulator.cpp  emulator.hpp
Emulator/src/emulator/src/: cpu.hpp  instr_dispatch_table.cpp  instruction_handlers.hpp  stack.hpp  status.hpp
Emulator/src/emulator/src/autogen/: CMakeLists.txt  dispatch_table_6502_autogen.cpp  instruction_set.py  instructions.yaml
Emulator/tests/: CMakeLists.txt  test_main.cpp
Emulator/tests/cpu/: test_6502_cpu.cpp
GameEngine/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.txt  main.cpp  mkdocs.yml  requirements.txt
GameEngine/docs/wiki/: index.md
GameEngine/docs/wiki/coding/: .pages  best_practices_and_standards.md  building.md  coding.md
GameEngine/docs/wiki/engine/: .pages  engine.md
GameEngine/docs/wiki/engine/math/coord_transformations/: coord_transformations.md  direction_cosine_matrices.md
GameEngine/docs/wiki/engine/rendering/: materials.md  shaders.md
GameEngine/docs/wiki/physics/: .pages  physics.md
GameEngine/docs/wiki/scripting/: .pages
GameEngine/src/: CMakeLists.txt
GameEngine/src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
GameEngine/src/engine/importers/: CMakeLists.txt
GameEngine/src/engine/importers/mesh_importer/: CMakeLists.txt  MeshImporter.cpp  MeshImporter.hpp  mesh_importer.cpp  mesh_importer.hpp
GameEngine/src/engine/importers/mesh_importer/_versions/: obj_parser_V0.cpp  obj_parser_V0.hpp
GameEngine/src/engine/importers/mesh_importer/formats/: CMakeLists.txt  assimp_parser.cpp  assimp_parser.hpp  fbx_parser.cpp  fbx_parser.hpp  gltf_parser.cpp  gltf_parser.hpp  obj_parser.cpp  obj_parser.hpp
GameEngine/src/engine/importers/mesh_importer/types/: CMakeLists.txt  mesh_types.hpp
GameEngine/src/engine/interfaces/: CMakeLists.txt  IMesh.hpp  IMeshParser.hpp  engine_interfaces.hpp
GameEngine/src/engine/parsers/: CMakeLists.txt
GameEngine/src/engine/parsers/mesh_parsers/: CMakeLists.txt  mesh_parser.hpp
GameEngine/src/engine/rendering/: CMakeLists.txt  Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
GameEngine/src/engine/rendering/shaders/: default.frag  default.vert
GameEngine/src/engine/resources/: CMakeLists.txt
GameEngine/src/engine/resources/managers/: CMakeLists.txt  MeshManager.cpp  MeshManager.hpp
GameEngine/src/engine/resources/serialization/: mesh_serializer.hpp
GameEngine/src/engine/resources/serializers/: CMakeLists.txt  MeshSerializer.cpp  MeshSerializer.hpp
GameEngine/src/engine/types/: CMakeLists.txt  MeshData.hpp  MeshTypes.hpp  mesh_data.hpp
GameEngine/src/engine/utils/: CMakeLists.txt
GameEngine/src/engine/utils/enums/: stringified_enum.hpp
GameEngine/src/engine/utils/strings/: CMakeLists.txt  string_search.hpp
GameEngine/src/tests/: CMakeLists.txt
GameEngine/src/tests/engine/: CMakeLists.txt
GameEngine/src/tests/engine/core/: CMakeLists.txt
GameEngine/src/tests/engine/importers/: test_mesh_importer.cpp
GameEngine/src/tests/engine/parsers/: CMakeLists.txt  obj_parser_test.cpp
GameEngine/src/tests/engine/rendering/: CMakeLists.txt
GameEngine/src/tests/engine/resources/: test_mesh_serializer.cpp
GameEngine/src/tests/engine/utils/: CMakeLists.txt
Networking/HTTP/: CMakeLists.txt  Makefile  README.md
Networking/HTTP/libs/: TcpLibTarget.cmake
Networking/HTTP/src/: CMakeLists.txt  http.hpp  main.cpp
Networking/HTTP/src/v1_1/: CMakeLists.txt  http_client.hpp  http_server.hpp
Networking/HTTP/src/v1_1/parser/: CMakeLists.txt  request_parser.hpp  response_parser.hpp
Networking/HTTP/src/v1_1/types/: CMakeLists.txt  commands.hpp  status.hpp
Networking/HTTP/test/: CMakeLists.txt
Networking/HTTP/test/http_basics/: CMakeLists.txt  main.cpp
Networking/TCP/tests/: CMakeLists.txt  test_get_google_homepage.cpp  test_tcp_client.cpp  test_tcp_server.cpp
Networking/UDP/: CMakeLists.txt  Makefile  README.md
Networking/UDP/exports/: UdpLibTarget.cmake
Networking/UDP/include/: socket_headers.hpp
Networking/UDP/src/: CMakeLists.txt  udp.hpp  udp_client.hpp  udp_server.hpp
Networking/UDP/test/: CMakeLists.txt
Networking/UDP/test/udp/: CMakeLists.txt  test_udp_client.cpp  test_udp_server.cpp
(+29 files in other folders)
